<resources>
    <string name="app_name">MyMatches</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="nameMatch">Match</string>
    <string name="date">Date</string>
    <string name="nomEquipe1"> <u>Nom de l\'équipe 1</u></string>
    <string name="pointEquipe1">score equipe1</string>
    <string name="nomEquipe2"> <u>Nom de l\'équipe 2</u></string>
    <string name="pointEquipe2">score équipe 2</string>
    <string name="buttonInfoEquipe">Info Equipes</string>
    <string name="photo">Photos</string>
    <string name="buttonLocalisation">Localisation</string>
    <string name="buttonStatistique">Statistiques</string>
    <string name="matchs">+ de matchs</string>
    <string name="infos">Infos</string>
    <string name="liste_des_matchs">Liste des matchs</string>
    <string name="back">Back</string>
    <string name="title_activity_info">Informations</string>
    <string name="ListeEquipe1">listeEquipe1</string>
    <string name="ListeEquipe2">listeEquipe2</string>
    <string name="title_activity_localisation">Localisation</string>
    <string name="title_activity_photos">Photos</string>
    <string name="localisation_title"> <u>Localisation du match</u></string>
    <string name="photos_title"><u>Photos du match</u></string>
    <string name="title_activity_statistiques">Statistiques</string>
    <string name="title_activity_maps">Localisation</string>
    <string name="title_activity_database_helper">DatabaseHelper</string>
    <string name="title_activity_new_match">Nouveau Match</string>
    <string name="button_ajout_match">Ajout d\'un match</string>
    <string name="boutonImage">Photo</string>
    <string name="boutonImage2">Gallerie</string>
    <string name="stat">score toute les 20 min</string>

</resources>
