<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Match">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nomEquipe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nomEquipe1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pointEquipe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pointEquipe1"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nomEquipe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nomEquipe2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/pointEquipe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pointEquipe2"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonInfoEquipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonInfoEquipe" />

        <Button
            android:id="@+id/buttonPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

        <Button
            android:id="@+id/buttonLocalisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonLocalisation" />

        <Button
            android:id="@+id/buttonStatistiques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonStatistique" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>